Fix: erase conflicting specificity from li elements and update buttons alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,14 +108,14 @@ body {
 
 /* Hamburguer menu */
 
-.hamburguer-menu {
+.hamburguer-container {
     display: none;
 }
  
-#menuToggle {
+#menu-toggle {
    display: block;
    position: relative;
-   left: 6px;
+   left: 25px;
    top: 23px;
    width: 30px;
    z-index: 1;
@@ -123,18 +123,25 @@ body {
    user-select: none;
  }
  
- #menuToggle a {
+ #menu-toggle a {
    text-decoration: none;
    color: #000;
    display: flex;
+   font-size: 18px;
+   padding: 10px 15px;
+   text-transform: capitalize;
+   width: 160px;
+   position: relative;
+   right: 15px;
+   bottom: 20px;
  }
  
- #menuToggle a:hover {
+ #menu-toggle a:hover {
    color: #fff;
  }
  
  
- #menuToggle input {
+ #menu-toggle input {
    display: block;
    width: 40px;
    height: 32px;
@@ -147,7 +154,7 @@ body {
    -webkit-touch-callout: none;
  }
  
- #menuToggle span {
+ #menu-toggle span {
    display: block;
    width: 30px;
    height: 4px;
@@ -158,11 +165,11 @@ body {
    z-index: 1;
  }
  
- #menuToggle input:checked ~ span {
+ #menu-toggle input:checked ~ span {
    background: #fff;
  }
  
- #menu {
+ #hamburguer-menu {
    position: absolute;
    width: 140px;
    height: 100vh;
@@ -179,12 +186,7 @@ body {
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
  }
  
- #menu li {
-   padding: 10px 0;
-   font-size: 22px;
- }
- 
- #menuToggle input:checked ~ ul {
+ #menu-toggle input:checked ~ ul {
    transform: none;
  }
 
@@ -464,7 +466,7 @@ body {
 #story-button h3 {
     font-size: 140%;
     letter-spacing: 2px;
-    left: 7%;
+    left: 11px;
     top: 4px;
     position: relative;
 }
@@ -662,7 +664,7 @@ body {
 .order-button h3 {
     font-size: 140%;
     letter-spacing: 2px;
-    left: 5%;
+    left: 11px;
     top: 4px;
     position: relative;
 }
@@ -915,7 +917,6 @@ form {
     position: relative;
 }
 
-
 /* Input type file style */
 
 ::-webkit-file-upload-button {
@@ -931,26 +932,28 @@ input[type=file] {
 
 .submit-button_box {
     background-color: #0E150E;
-    height: 32px;
-    width: 120px;
+    height: 37px;
+    width: 170px;
     border-radius: 12px;
     margin-top: 10px;
-    top: 5px;
+    top: 6px;
     left: 200px;
     position: relative;
 }
 
 #submit-button {
     background-color: #0E150E;
-    font-size: 125%;
+    font-size: 140%;
+    letter-spacing: 2px;
     color: #FFF9EA;
     text-transform: capitalize;
     text-decoration: none;
     border-radius: 10px;
-    top: 5px;
+    top: 4px;
     left: 8px;
     position: relative;
     cursor: pointer;
+    font-family: 'Roboto Mono', monospace;;
 }
 
 #submit-button:hover {
@@ -1199,7 +1202,7 @@ input[type=file] {
         display: none;
     }
 
-    .hamburguer-menu {
+    .hamburguer-container {
         display: block;
     }
 
